--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -13,9 +13,7 @@ jobs:
 
       - name: Install Go
         uses: actions/setup-go@v3
-        with:
-          go-version: 1.20
 
-      - name: Build
+      - name: Test
         run: find . -name go.mod -execdir go test ./... \;
 
