--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -13,7 +13,10 @@ jobs:
 
       - name: Install Go
         uses: actions/setup-go@v3
+        with:
+          go-version: 1.21.2
 
       - name: Test
+        shell: bash
         run: find . -name go.mod -execdir go test ./... \;
 
