--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -18,5 +18,5 @@ jobs:
 
       - name: Test
         shell: bash
-        run: find . -name go.mod -execdir go test ./... \;
+        run: go test -v ./...
 
